--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	  	<title>User Testing 360°</title>
 	  	<link rel="stylesheet" type="text/css" href="css/main.css">
 	  	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	  	<link rel="stylesheet" type="text/css" href="css/queries.css">
 	</head>
 	<body>
 		<!--Escribe aqui tu codigo-->
