--- a/index.html
+++ b/index.html
@@ -3,10 +3,49 @@
 	<head>
 	  	<meta charset="utf-8">
 	  	<title>User Testing 360°</title>
+	  	<link rel="shortcut icon" href="favicon.ico">
 	  	<link rel="stylesheet" type="text/css" href="css/main.css">
 	  	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	</head>
 	<body>
-		<!--Escribe aqui tu codigo-->
+		<header class="fondo white">
+			<div class="container">
+				<div class=" row">
+           		    <div class="col-lg-12 col-xs-12">
+           		    	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+                                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-1">
+                 	                <span class="sr-only">Menu</span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                               	</button>
+                               	<h4 class="nombre">Squad 4</h4>
+                               	<div class="collapse navbar-collapse" id="navbar-1">
+									<ul class="nav navbar-nav navbar-right">
+										<li><a class="white" href="#sobremi">Sobre Nosotras</a></li>
+										<li><a class="white" href="#servicios">Problematica</a></li>
+										<li><a class="white" href="#mistrabajos">Soluciones</a></li>
+										<li><a class="white" href="#contac">Nuestras redes</a></li>
+									</ul>     
+                                </div>
+                        </nav>
+                    </div>
+                    <div class="row">
+                    	<div class="col-lg-12 col-xs-12">
+                    		<h2>Obtén videos de personas reales utilizando tu sitio web, en 1 Hora</h2>
+                    	</div>
+                    </div>
+                    <div class="row fa">
+                    	<div class="col-lg-6 col-xs-6">
+                    		<h4>PRUEBA GRATUITA</h4>
+                    		<p>Obtén un video gratis de 5 minutos</p>
+                    	</div>
+                    	<div class="col-lg-6 col-xs-6">
+                    		<a href="contact.html" class="btn btn-primary btn-sm active" role="button" title="contacto" target="_blank">Pruebalo gratis</a>
+                    	</div>
+                    </div>
+                </div>
+            </div>    
+		</header>
     </body>
 </html>
