--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                                	<h4 class="nombre">Squad 4</h4>
                                	<div class="collapse navbar-collapse" id="navbar-1">
 									<ul class="nav navbar-nav navbar-right">
-										<li><a class="white" href="#sobremi">Sobre Nosotras</a></li>
-										<li><a class="white" href="#servicios">Problematica</a></li>
-										<li><a class="white" href="#mistrabajos">Soluciones</a></li>
-										<li><a class="white" href="#contac">Nuestras redes</a></li>
+										<li><a class="white" href="#ofrece">¿Qué me ofrece?</a></li>
+										<li><a class="white" href="#funcion">¿Comó funciona?</a></li>
+										<li><a class="white" href="#porque">¿Por qué usarlo?</a></li>
+										<li><a class="white" href="#contac">Contactanos</a></li>
 									</ul>     
                                 </div>
                         </nav>
@@ -47,5 +47,37 @@
                 </div>
             </div>    
 		</header>
+		<section><!--Sección1-->
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12 col-xs-12">
+						<h2 class="azul text-center">Nuestros Servicios</h2>
+					</div>
+				</div>
+				<div class="row text-center">
+					<div class="col-lg-4 col-xs-12">
+						<img src="">
+						<p class="azulm">Pruebalo gratis</p>
+						<p>Obtén un primer video screencast de un usuario navegando tu página.</p>
+					</div>
+					<div class="col-lg-4 col-xs-12">
+						<img src="">
+						<p class="azulm">Compra el servicio completo</p>
+						<p>Si te gustó; compra nuestro servicio completo que incluye? vídeos y feedback.</p>
+					</div>
+					<div class="col-lg-4 col-xs-12">
+						<img src="">
+						<p class="azulm">Obtén el resultado en 1 día</p>
+						<p>Te haremos llegar los vídeos y el feedback completo el  mismo día.</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-lg-12 col-xs-12">
+						<hr>
+						<img src="image/separador.png" class="center-block img-responsive">
+					</div>
+				</div>			
+			</div>
+		</section><!--Fin de sección1-->
     </body>
 </html>
