Estructura de las secciones

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 </div>
             </div>    
 		</header>
-		<section><!--Sección1-->
-			<div class="container">
+		<div class="container">
+			<section><!--Sección1-->
 				<div class="row">
 					<div class="col-lg-12 col-xs-12">
 						<h2 class="azul text-center">Nuestros Servicios</h2>
@@ -77,7 +77,46 @@
 						<img src="image/separador.png" class="center-block img-responsive">
 					</div>
 				</div>			
-			</div>
-		</section><!--Fin de sección1-->
+			</section><!--Fin de sección1-->
+			<section><!--Sección2-->
+				<div class="row">
+					<div class="col-lg-6 col-xs-12">
+						<h2 class="azul">Ejemplo de <img class="img-responsive" src="image/logo-2.jpg"></h2>
+						<p>En este video te damos un ejemplo de un integrante de nuestro panel evalunado la experiencia de uso de <a href="">mimediamanzana.com</a></p>
+						<p>El objetivo de User Testing 360 es identificar situaciones confusas de los ususarios web y describir soluciones, que garanticen una experiencia de uso satisfactoria.</p>
+						<img class="img-responsive center-block" src="image/flecha.png" alt="flecha">
+					</div>
+					<div class="col-lg-6 col-xs-12">
+						<iframe class="img-responsive video" src="https://www.youtube.com/embed/u7MDfG9ZJTU" frameborder="0" allowfullscreen></iframe>
+					</div>
+				</div>
+			</section><!--Fin de sección2-->
+			<section><!--Inicio de la seccion3-->
+				<div class="row">
+					<div class="col-lg-6 col-xs-12"></div>
+				</div>
+				<hr>
+
+			</section><!--Fin de la seccion4 -->
+			<section><!--Seccion5-->
+				<div class="row">
+					<div class="col-lg-6 col-xs-12">
+						<h2>Por qúe usar<img class="img-responsive" src="image/logo-2.jpg"></h2>
+						<p>En la Actualidad en la que nos encontramos, la web se ha convertido en el mejoer sitio para llegar a millones de personas en segundos, pero ¿qué pasa si el producto digital que ofreces no es bueno o no se entiende? Pierdes esta enorme oportunidad. Con <a href="">User Testing 360</a>, puedes entender la experiencia de uso de tu página o producto digital y mejorarla para que satisfaga todas las necesidade de tus usuarios, Con <a href=""> User Testing 360</a> podrás entender:</p>
+						<ul>
+							<li>¿Comó tu público objetivo verdaderamente usa tu producto?</li>
+							<li>¿Qué se hace fácil o dificil al navegador en tu producto?</li>
+							<li>¿Qué es lo que tu público quiere hacer y tal vez no obtiene o consigue?</li>
+						</ul>
+						<p><a href="">"User Testing 360"</a> te ayudará a responder estas preguntas y muchas más. Es el toque final perfecto para tu página o producto digital.</p>
+					</div>
+					<div class="col-lg-6 col-xs-12 foim">
+						<img src="image/user-r.png">
+					</div>
+				</div>
+			</section><!--Fin de la seccion5-->
+		</div>
+		<script src="js/jquery.js"></script>
+		<script src="js/bootstrap.min.js"></script>
     </body>
 </html>
