--- a/index.html
+++ b/index.html
@@ -70,13 +70,15 @@
 						<p class="azulm">Obtén el resultado en 1 día</p>
 						<p>Te haremos llegar los vídeos y el feedback completo el  mismo día.</p>
 					</div>
-				</div>
-				<div class="row">
+				</div>	
+				<div class="row" id="sep"><!--separadorm, funcion-->
 					<div class="col-lg-12 col-xs-12">
 						<hr>
-						<img src="image/separador.png" class="center-block img-responsive">
+						<div class="img">
+							<img src="image/separador.png" alt="">
+						</div>
 					</div>
-				</div>			
+				</div>		
 			</section><!--Fin de sección1-->
 			<section><!--Sección2-->
 				<div class="row">
@@ -93,10 +95,36 @@
 			</section><!--Fin de sección2-->
 			<section><!--Inicio de la seccion3-->
 				<div class="row">
-					<div class="col-lg-6 col-xs-12"></div>
-				</div>
-				<hr>
+					<hr>
+					<div class="col-lg-6 col-xs-12">
+						<img class="img-responsive" src="image/sec-2.jpg">
+					</div>
+					<div class="col-lg-6 col-xs-12">
+						<h2 class="azul">Lo quiero ¿Qué hago?</h2>
+						<h3>Paso 1: Envianos tu link</h3>
+						<p>Al darle click al botón de prueba. Coloca tu nombre y tu correo electrónico a donde enviaremos el vídeo y el informe con el feedback.</p>
 
+						<h3>Paso 2: Describe a tu público objetivo</h3>
+						<p>Describe las acciones que quieres que evaluemos por ejemplo:<br>
+						<ul>
+							<li>A primera vista de ¿Qué crees que trata la página?</li>
+							<li>Busca el botón de incribirte ó comprar</li>
+							<li>¿Es fácil o difícil leer los textos?</li>
+						</ul>
+						Puedes preguntas como las que te mostramos.</p>
+
+						<h3>Paso 3: Recibe un video y el fedback completo</h3>
+						<p>Recibbe un combo de 7 videos y un informe detallado con las captaciones de usabilidad de tu producto.</p>
+					</div>
+				</div>
+				<div class="row" id="sep"><!--separadorm, funcion-->
+					<div class="col-lg-12 col-xs-12">
+						<hr>
+						<div class="img">
+							<img src="image/separador.png" alt="">
+						</div>
+					</div>
+				</div>
 			</section><!--Fin de la seccion4 -->
 			<section><!--Seccion5-->
 				<div class="row">
@@ -110,12 +138,43 @@
 						</ul>
 						<p><a href="">"User Testing 360"</a> te ayudará a responder estas preguntas y muchas más. Es el toque final perfecto para tu página o producto digital.</p>
 					</div>
-					<div class="col-lg-6 col-xs-12 foim">
-						<img src="image/user-r.png">
+					<div class="col-lg-6 col-xs-12">
+						<img class="img-responsive" src="image/banner.jpg">
 					</div>
 				</div>
 			</section><!--Fin de la seccion5-->
 		</div>
+		<footer>
+			<div class="azulback">
+				<div class="container">
+					<div class="row ">
+						<div class="col-lg-6 col-xs-6 white">
+							<h4>PRUEBA GRATUITA</h4>
+							<P>obten in video de 5 minutos gratis</P>
+						</div>
+						<div class="col-lg-6 col-xs-6">
+							<a href="contact.html" class="btn btn-primary btn-sm active" role="button" title="contacto" target="_blank">Pruebalo gratis</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="marback">
+				<div class="container">
+					<div class="row ">
+						<div class="col-lg-6 col-xs-6 white">
+							<p>Escribenos a:</p>
+							<P><a href="">experiencia de usuario.lab@gmail.com</a></P>
+							<p>telef:989637935</p>
+						</div>
+						<div class="col-lg-6 col-xs-6">
+							<a class="icon-facebook social" href="#"><img src="image/icon/facebook.png"></a>
+							<a class="icon-twitter social" href="#"><img src="image/icon/twitter.png"></a>
+							<p class="white">Copyright ©2015 - User Testing 360</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</footer>
 		<script src="js/jquery.js"></script>
 		<script src="js/bootstrap.min.js"></script>
     </body>
