--- a/index.html
+++ b/index.html
@@ -11,25 +11,22 @@
 		<header class="fondo white">
 			<div class="container">
 				<div class=" row">
-           		    <div class="col-lg-12 col-xs-12">
-           		    	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-                                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-1">
-                 	                <span class="sr-only">Menu</span>
-                                    <span class="icon-bar"></span>
-                                    <span class="icon-bar"></span>
-                                    <span class="icon-bar"></span>
-                               	</button>
-                               	<h4 class="nombre">Squad 4</h4>
-                               	<div class="collapse navbar-collapse" id="navbar-1">
-									<ul class="nav navbar-nav navbar-right">
-										<li><a class="white" href="#ofrece">¿Qué me ofrece?</a></li>
-										<li><a class="white" href="#funcion">¿Comó funciona?</a></li>
-										<li><a class="white" href="#porque">¿Por qué usarlo?</a></li>
-										<li><a class="white" href="#contac">Contactanos</a></li>
-									</ul>     
-                                </div>
-                        </nav>
-                    </div>
+           		    <div class="row pd-1">
+							<div class="col-xs-12 col-md-4 pd-0">
+								<a id="any" href="index.html"><img src="image/user-r.png" alt=""></a>
+								<div id="mostrar-nav" class="icon-gears"></div>
+							</div>
+							<div class="col-xs-12 col-md-8 pd-0">
+								<nav >
+									<ul class=" menu_sec">
+										<li><a href="#service"><span class="icono icon-search"></span>¿Qué me ofrece?</a></li>
+										<li><a href="#ejemplo"><span class="icono icon-search"></span>¿Cómo funciona?</a></li>
+										<li><a href="#more"><span class="icono icon-search"></span>¿Por qué usarlo?</a></li>
+										<li><a href="contact.html"><span class="icono icon-search"></span>Contactanos</a></li>
+									</ul>
+								</nav>
+							</div>
+						</div>
                     <div class="row">
                     	<div class="col-lg-12 col-xs-12">
                     		<h2>Obtén videos de personas reales utilizando tu sitio web, en 1 Hora</h2>
@@ -41,8 +38,15 @@
                     		<p>Obtén un video gratis de 5 minutos</p>
                     	</div>
                     	<div class="col-lg-6 col-xs-6">
-                    		<a href="contact.html" class="btn btn-primary btn-sm active" role="button" title="contacto" target="_blank">Pruebalo gratis</a>
+                    		<a data-toggle="modal" href="contac.html" class="btn btn-primary btn-large">Abrir ventana modal</a>
                     	</div>
+ <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal" href="contact.html">Open Modal</button>
+
+
+
+
+
+
                     </div>
                 </div>
             </div>    
@@ -56,17 +60,17 @@
 				</div>
 				<div class="row text-center">
 					<div class="col-lg-4 col-xs-12">
-						<img src="">
+						<img class="center-block img-responsive" src="image/icon/video.png">
 						<p class="azulm">Pruebalo gratis</p>
 						<p>Obtén un primer video screencast de un usuario navegando tu página.</p>
 					</div>
 					<div class="col-lg-4 col-xs-12">
-						<img src="">
+						<img class="center-block img-responsive" src="image/icon/clock.png">
 						<p class="azulm">Compra el servicio completo</p>
 						<p>Si te gustó; compra nuestro servicio completo que incluye? vídeos y feedback.</p>
 					</div>
 					<div class="col-lg-4 col-xs-12">
-						<img src="">
+						<img class="center-block img-responsive" src="image/icon/file.png">
 						<p class="azulm">Obtén el resultado en 1 día</p>
 						<p>Te haremos llegar los vídeos y el feedback completo el  mismo día.</p>
 					</div>
