problemas con git por eso se creo otra rama

--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Contacto</title>
-</head>
-<body>
-<!--Escribe aqui tu codigo-->
-</body>
+    <head>
+        <title>Contacto</title>
+        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <link rel="shortcut icon" href="favicon.ico">
+        <link rel="stylesheet" type="text/css" href="css/main.css">
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    </head>
+    <body>
+     <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    </body>
 </html>
