--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 	  	<link rel="shortcut icon" href="favicon.ico">
 	  	<link rel="stylesheet" type="text/css" href="css/main.css">
 	  	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	  	<link rel="stylesheet" type="text/css" href="css/icomoon.css">
+	  	<link rel="stylesheet" type="text/css" href="css/queries.css">
 	</head>
 	<body>
 		<header class="fondo white">
 			<div class="container">
-           		<div class="row">
+           		<div class="row mr-t">
 					<div class="col-lg-6 col-xs-6">
 						<img class="img-responsive" src="image/user-r.png" alt="log">
 					</div>	
@@ -34,16 +36,11 @@
 						</nav>
 					</div>
 				</div>
-             
-                      
-
-
-                    <div class="row">
-                    	<div class="col-lg-12 col-xs-12">
-                    		<h2>Obtén videos de personas reales utilizando tu sitio web, en 1 Hora</h2>
-                    	</div>
+            	<div class="row">
+                    <div class="col-lg-12 col-xs-12">
+                    	<h2 class="enc">Obtén videos de personas reales utilizando tu sitio web, en 1 Hora</h2>
                     </div>
-                </div> 
+                </div>
             </div>  
             <div class="container-fluid">
             	<div class="row azulback">
@@ -52,11 +49,41 @@
 						<p>Obtén un video gratis de 5 minutos</p>
 					</div>
 					<div class="col-lg-6 col-xs-6">
-
+						<button class="btn btn-info" data-toggle="modal" data-target="#ventana">
+							Prueba gratis
+						</button>
+						<div class="modal fade" id="ventana" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+							<div class=="modal-dialog">
+								<div class="modal-content">
+									<div class="modal-header">
+										<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+										<h4 class="azul text-center">Formulario User Testing 360</h4>
+										<hr>
+									</div>
+									<div class="modal-body azul">
+										<form role="form">
+											<div class="form-group">
+											    <label for="nombre">Nombre</label>
+											    <input type="email" class="form-control" id="nombre" placeholder="Introduce tu nombre">
+											</div>
+											<div class="form-group">
+											<label for="Email">Email</label>
+											    <input for="email" class="form-control" id="email" placeholder="Introduce tu Email">
+											</div>
+											<div class="form-group">
+											    <label for="Dejame tu URL">URL</label>
+											    <input for="URL" class="form-control" id="Dejame tu URL" placeholder="Url">
+											</div>
+											<button type="submit" class="center-block btn btn-primary">Enviar Email</button>
+										</form>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>	
             </div>     
-		</header>
+		</header><!--Fin del header-->
 		<div class="container">
 			<section><!--Sección1-->
 				<div class="row mr-t">
@@ -111,9 +138,9 @@
 				<div class="row mr-t">
 					<hr>
 					<div class="col-lg-6 col-xs-12 sec2">
-						<img class="icon" src="image/icon/edi.png">
-						<img class="icon" src="image/icon/settings.png">
-						<img class="icon" src="image/icon/search.png">
+						<img class="icon visible-lg" src="image/icon/edit.png">
+						<img class="icon visible-lg" src="image/icon/settings.png">
+						<img class="icon visible-lg" src="image/icon/search.png">
 					</div>
 					<div class="col-lg-6 col-xs-12">
 						<h2>Lo quiero ¿Qué hago?</h2>
