--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<body>
 		<header class="fondo white">
 			<div class="container">
-           		<div class="row mr-t">
+           		<div class="row ">
 					<div class="col-lg-6 col-xs-6">
 						<img class="img-responsive" src="image/user-r.png" alt="log">
 					</div>	
@@ -27,10 +27,10 @@
 							</button>
 							<div class="collapse navbar-collapse" id="navbar-1">
 								<ul class="nav navbar-nav navbar-right">
-									<li><a class="white" href="#ofrece"><span class="icono icon-search"></span>¿Qué me ofrece?</a></li>
-									<li><a class="white" href="#ejemplo"><span class="icono icon-search"></span>¿Cómo funciona?</a></li>
-									<li><a class="white" href="#porque"><span class="icono icon-search"></span>¿Por qué usarlo?</a></li>
-									<li><a class="white" href="#contactanos"><span class="icono icon-search"></span>Contactanos</a></li>
+									<li><a class="white" href="#ofrece"><span class="icono "></span>¿Qué me ofrece?</a></li>
+									<li><a class="white" href="#ejemplo"><span class="icono "></span>¿Cómo funciona?</a></li>
+									<li><a class="white" href="#porque"><span class="icono "></span>¿Por qué usarlo?</a></li>
+									<li><a class="white" href="#contactanos"><span class="icono "></span>Contactanos</a></li>
 								</ul>
 							</div>	
 						</nav>
@@ -38,7 +38,7 @@
 				</div>
             	<div class="row">
                     <div class="col-lg-12 col-xs-12">
-                    	<h2 class="enc">Obtén videos de personas reales utilizando tu sitio web, en 1 Hora</h2>
+                    	<h2 class="pd">Obtén videos de personas reales utilizando tu sitio web, en 1 Hora</h2>
                     </div>
                 </div>
             </div>  
@@ -49,7 +49,7 @@
 						<p>Obtén un video gratis de 5 minutos</p>
 					</div>
 					<div class="col-lg-6 col-xs-6">
-						<button class="btn btn-info" data-toggle="modal" data-target="#ventana">
+						<button class="btn btn-info focus" data-toggle="modal" data-target="#ventana">
 							Prueba gratis
 						</button>
 						<div class="modal fade" id="ventana" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -94,17 +94,17 @@
 				</div>
 				<div class="row text-center mr-t">
 					<div class="col-lg-4 col-xs-12">
-						<img class="center-block img-responsive" src="image/icon/video.png">
+						<img class="ser move center-block img-responsive" src="image/icon/video.png">
 						<a class="tamr" href="">Pruebalo <br>gratis</a>
 						<p class="pd">Obtén un primer video screencast de un usuario navegando tu página.</p>
 					</div>
 					<div class="col-lg-4 col-xs-12">
-						<img class="bounceInLeft animated center-block img-responsive" src="image/icon/clock.png">
+						<img class="ser move center-block img-responsive" src="image/icon/clock.png">
 						<a class="tamr" href="">Compra el <br>servicio completo</a>
 						<p class="pd">Si te gustó; compra nuestro servicio completo que incluye? vídeos y feedback.</p>
 					</div>
 					<div class="col-lg-4 col-xs-12">
-						<img class="center-block img-responsive" src="image/icon/file.png">
+						<img class="ser move center-block img-responsive" src="image/icon/file.png">
 						<a class="tamr" href="">Obtén el resultado <br>en 1 día</a>
 						<p class="pd">Te haremos llegar los vídeos y el feedback completo el  mismo día.</p>
 					</div>
@@ -138,9 +138,9 @@
 				<div class="row mr-t">
 					<hr>
 					<div class="col-lg-6 col-xs-12 sec2">
-						<img class="icon visible-lg" src="image/icon/edit.png">
-						<img class="icon visible-lg" src="image/icon/settings.png">
-						<img class="icon visible-lg" src="image/icon/search.png">
+						<img class="icon ef visible-lg" src="image/icon/edit.png">
+						<img class="icon ef visible-lg" src="image/icon/settings.png">
+						<img class="icon ef visible-lg" src="image/icon/search.png">
 					</div>
 					<div class="col-lg-6 col-xs-12">
 						<h2>Lo quiero ¿Qué hago?</h2>
@@ -192,29 +192,31 @@
 		<footer>
 			<div class="azulback">
 				<div class="container">
-					<div class="row ">
+					<div class="row mg-t">
 						<div class="col-lg-6 col-xs-6 white">
 							<h4>PRUEBA GRATUITA</h4>
 							<P>obten in video de 5 minutos gratis</P>
 						</div>
 						<div class="col-lg-6 col-xs-6">
-							<a href="contact.html" class="btn btn-primary btn-sm active" role="button" title="contacto" target="_blank">Pruebalo gratis</a>
+							<button class="btn btn-info focus" data-toggle="modal" data-target="#ventana">
+							Prueba gratis
+						</button>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="marback">
 				<div class="container">
-					<div class="row ">
+					<div class="row mr-t">
 						<div class="col-lg-6 col-xs-6 white">
 							<a name="contactanos"></a>
 							<p>Escribenos a:</p>
 							<P><a href="">experiencia de usuario.lab@gmail.com</a></P>
 							<p>telef:989637935</p>
 						</div>
-						<div class="col-lg-6 col-xs-6">
-							<a class="icon-facebook social" href="#"><img src="image/icon/facebook.png"></a>
-							<a class="icon-twitter social" href="#"><img src="image/icon/twitter.png"></a>
+						<div class="col-lg-6 col-xs-6 text-right">
+							<a class="icon-facebook social" href="#"></a>
+							<a class="icon-twitter social" href="#"></a>
 							<p class="white">Copyright ©2015 - User Testing 360</p>
 						</div>
 					</div>
