--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	  	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	  	<link rel="stylesheet" type="text/css" href="css/icomoon.css">
 	  	<link rel="stylesheet" type="text/css" href="css/queries.css">
+	  	<link rel="stylesheet" type="text/css" href="css/animate.css">
 	</head>
 	<body>
 		<header class="fondo white">
@@ -18,8 +19,8 @@
 						<img class="img-responsive" src="image/user-r.png" alt="log">
 					</div>	
 					<div class="col-lg-6 col-xs-6">
-						<nav class="navbar navbar-default" role="navigation">
-							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-1">
+						<nav class="navbar" role="navigation">
+							<button type="button" class="navbar-toggle navbar-default collapsed" data-toggle="collapse" data-target="#navbar-1">
 								<span class="sr-only">Menu</span>
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
@@ -27,10 +28,10 @@
 							</button>
 							<div class="collapse navbar-collapse" id="navbar-1">
 								<ul class="nav navbar-nav navbar-right">
-									<li><a class="white" href="#ofrece"><span class="icono "></span>¿Qué me ofrece?</a></li>
-									<li><a class="white" href="#ejemplo"><span class="icono "></span>¿Cómo funciona?</a></li>
-									<li><a class="white" href="#porque"><span class="icono "></span>¿Por qué usarlo?</a></li>
-									<li><a class="white" href="#contactanos"><span class="icono "></span>Contactanos</a></li>
+									<li><a class="azul" href="#ofrece"><span class="icono "></span>¿Qué me ofrece?</a></li>
+									<li><a class="azul" href="#ejemplo"><span class="icono "></span>¿Cómo funciona?</a></li>
+									<li><a class="azul" href="#porque"><span class="icono "></span>¿Por qué usarlo?</a></li>
+									<li><a class="azul" href="#contactanos"><span class="icono "></span>Contactanos</a></li>
 								</ul>
 							</div>	
 						</nav>
@@ -122,8 +123,8 @@
 				<div class="row mr-t">
 					<div class="col-lg-6 col-xs-12">
 						<a name="ejemplo"></a>
-						<h2 class="azul texim">Ejemplo de</h2>
-						<img class="img-responsive im" src="image/logo-2.jpg">
+						<h2 class="azul texim">Ejemplo de <img class="img-responsive im" src="image/logo-2.jpg"></h2>
+						
 						<p>En este video te damos un ejemplo de un integrante de nuestro panel evalunado la experiencia de uso de</p>
 						<a href="">mimediamanzana.com</a>
 						<p>El objetivo de User Testing 360 es identificar situaciones confusas de los ususarios web y describir soluciones, que garanticen una experiencia de uso satisfactoria.</p>
@@ -192,7 +193,7 @@
 		<footer>
 			<div class="azulback">
 				<div class="container">
-					<div class="row mg-t">
+					<div class="row mr-t">
 						<div class="col-lg-6 col-xs-6 white">
 							<h4>PRUEBA GRATUITA</h4>
 							<P>obten in video de 5 minutos gratis</P>
@@ -215,8 +216,8 @@
 							<p>telef:989637935</p>
 						</div>
 						<div class="col-lg-6 col-xs-6 text-right">
-							<a class="icon-facebook social" href="#"></a>
-							<a class="icon-twitter social" href="#"></a>
+							<a class="icon-facebook social" href="https://www.facebook.com/LaboratoriaMX/"></a>
+							<a class="icon-twitter social" href="https://twitter.com/LaboratoriaLA"></a>
 							<p class="white">Copyright ©2015 - User Testing 360</p>
 						</div>
 					</div>
