Arreglo de menu

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 	  	<link rel="stylesheet" type="text/css" href="css/animate.css">
 	</head>
 	<body>
-		<header class="fondo white">
+		<header class="fondo white pt-2">
 			<div class="container">
            		<div class="row ">
-					<div class="col-lg-6 col-xs-6">
+					<div class="col-lg-6 col-xs-4 ">
 						<img class="img-responsive" src="image/user-r.png" alt="log">
 					</div>	
-					<div class="col-lg-6 col-xs-6">
+					<div class="col-lg-6 col-xs-8">
 						<nav class="navbar" role="navigation">
-							<button type="button" class="navbar-toggle navbar-default collapsed" data-toggle="collapse" data-target="#navbar-1">
+							<button type="button" class="navbar-toggle navbar-inverse collapsed" data-toggle="collapse" data-target="#navbar-1">
 								<span class="sr-only">Menu</span>
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
@@ -31,7 +31,7 @@
 									<li><a class="azul" href="#ofrece"><span class="icono "></span>¿Qué me ofrece?</a></li>
 									<li><a class="azul" href="#ejemplo"><span class="icono "></span>¿Cómo funciona?</a></li>
 									<li><a class="azul" href="#porque"><span class="icono "></span>¿Por qué usarlo?</a></li>
-									<li><a class="azul" href="#contactanos"><span class="icono "></span>Contactanos</a></li>
+									<li><a class="azul" href="#contactanos"><span class="icono "></span>Contáctanos</a></li>
 								</ul>
 							</div>	
 						</nav>
@@ -44,13 +44,13 @@
                 </div>
             </div>  
             <div class="container-fluid">
-            	<div class="row azulback">
+            	<div class="row transparente">
 					<div class="col-lg-6 col-xs-6 text-right">
 						<h4>Prueba Gratuita</h4>
 						<p>Obtén un video gratis de 5 minutos</p>
 					</div>
 					<div class="col-lg-6 col-xs-6">
-						<button class="btn btn-info focus" data-toggle="modal" data-target="#ventana">
+						<button class="btn btn-info" data-toggle="modal" data-target="#ventana">
 							Prueba gratis
 						</button>
 						<div class="modal fade" id="ventana" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -131,7 +131,7 @@
 						<img class="img-responsive center-block" src="image/flecha.png" alt="flecha">
 					</div>
 					<div class="col-lg-6 col-xs-12">
-						<iframe class="embed-responsive-item video" src="https://www.youtube.com/embed/u7MDfG9ZJTU" frameborder="0" allowfullscreen></iframe>
+						<iframe src="https://www.youtube.com/embed/u7MDfG9ZJTU" frameborder="0" allowfullscreen></iframe>
 					</div>
 				</div>
 			</section><!--Fin de sección2-->
@@ -191,15 +191,15 @@
 			</section><!--Fin de la seccion5-->
 		</div>
 		<footer>
-			<div class="azulback">
+			<div class="azulback pb-2">
 				<div class="container">
 					<div class="row mr-t">
 						<div class="col-lg-6 col-xs-6 white">
 							<h4>PRUEBA GRATUITA</h4>
-							<P>obten in video de 5 minutos gratis</P>
+							<P>obten un video de 5 minutos gratis</P>
 						</div>
 						<div class="col-lg-6 col-xs-6">
-							<button class="btn btn-info focus" data-toggle="modal" data-target="#ventana">
+							<button class="btn btn-info " data-toggle="modal" data-target="#ventana">
 							Prueba gratis
 						</button>
 						</div>
