Arreglo del modal

--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
             <div class="container-fluid">
             	<div class="row transparente">
 					<div class="col-lg-6 col-xs-6 text-right">
-						<h4>Prueba Gratuita</h4>
+						<h4 class="hidden-xs">Prueba Gratuita</h4>
 						<p>Obtén un video gratis de 5 minutos</p>
 					</div>
-					<div class="col-lg-6 col-xs-6">
+					<div class="col-lg-6 col-xs-6 center-block">
 						<button class="btn btn-info" data-toggle="modal" data-target="#ventana">
 							Prueba gratis
 						</button>
 						<div class="modal fade" id="ventana" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-							<div class=="modal-dialog">
+							<div class=="modal-dialog" id="mdialTamanio">
 								<div class="modal-content">
 									<div class="modal-header">
 										<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
